<resources>
    <string name="app_name">ANU Study Companion</string>
    <string name="account_entry_prompt">Start your \nlearning journey @ANU right here, right now.</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_account">Create your account</string>
    <string name="back_button">Back Button</string>
    <string name="logo">Logo</string>
    <string name="finish">Finish</string>
    <string name="login_prompt">To get started, first\nenter your email and password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="add_note_button">Add Note Button</string>
    <string name="add_new_note">Add New Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_reminder_text">Enter reminder text</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="enter_reminder_tex">Enter reminder text</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>
    <string name="new_reminder">New Reminder</string>
    <string name="my_reminders">My Reminders</string>
    <string name="rb_treeviz">RB TreeViz</string>

    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="revise_disabled">Revise Disabled</string>
    <string name="next_revise_time">Next Revise Time</string>
    <string name="homework">Homework</string>
    <string name="exams">Exams</string>
    <string name="projects">Projects</string>
    <string name="lectures">Lectures</string>
    <string name="readings">Readings</string>
    <string name="essays">Essays</string>
    <string name="lab_work">Lab Work</string>
    <string name="group_study">Group Study</string>
    <string name="presentations">Presentations</string>
    <string name="research">Research</string>
    <string name="add_tag">Add Tag</string>
    <string name="yes">Yes</string>
    <string name="note_deleted_success">Note deleted successfully.</string>
    <string name="note_deleted_failed">Failed while deleting the note.</string>
    <string name="no">No</string>
    <string name="load_from_file">Load From File</string>
    <string name="delete">Delete</string>

    <string name="add_new_discussion">Add New Discussion</string>
    <string name="add_discussion">Add Discussion</string>
    <string name="discussions">Discussions</string>
    <string name="search">Search</string>
    <string name="select_start_date">Start Date</string>
    <string name="to">To</string>
    <string name="select_end_date">End Date</string>
    <string name="enter_tags">Enter Tags</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="your_comment">Your comment</string>
    <string name="post">Post</string>
    <string name="details">Details</string>
    <string name="sort_by">Sort by</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="update_note">Update Note</string>
    <string name="remove_last_add">Remove Last Add</string>
    <string name="clear">Clear</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="bst_visualization">BST Visualization</string>
    <string name="rb_tree_visualization">RB Tree Visualization</string>
    <string name="you_selected">"You selected: "</string>
    <string name="edit_countdown">Edit Countdown</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="add_countdown">Add Countdown</string>
    <string name="countdown_days">Countdown Days</string>
    <string name="tree_visualizer">Tree Visualizer</string>
    <string name="load">Load</string>
    <string name="upload">Upload</string>

</resources>