<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@null"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_back" />

            <ImageView
                android:layout_width="@dimen/placeholder_image"
                android:layout_height="@dimen/placeholder_image"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="start"
            android:text="@string/login_prompt"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xxlarge"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:autofillHints="email"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:autofillHints="password"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_200" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/btn_main_bg"
            android:letterSpacing="0"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/text_mlarge"
            android:textStyle="bold"
            app:backgroundTint="@color/anu_gold_background_alpha" />

        <ProgressBar
            android:id="@+id/register_progress_bar"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_xmedium"
            android:visibility="gone"
            />

    </LinearLayout>

</RelativeLayout>