<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".note.search.NoteSearchActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/title_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_search"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/title_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_large"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_search" />

    <!-- Date Filter -->
    <LinearLayout
        android:id="@+id/date_filter_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <Button
            android:id="@+id/buttonDateFrom"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:textColor="@color/anu_gold_font"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_start_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/to" />

        <Button
            android:id="@+id/buttonDateTo"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/anu_gold_font"
            android:layout_weight="1"
            android:text="@string/select_end_date" />
    </LinearLayout>

    <!-- Tag Filter -->
    <LinearLayout
        android:id="@+id/tag_filter_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/date_filter_linear_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTag"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewTag"
                android:layout_width="match_parent"
                android:padding="2dp"
                android:layout_height="@dimen/text_xxlarge"
                android:hint="@string/enter_tags" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <!-- Add a Filter Button -->
        <Button
            android:id="@+id/button_apply_filters"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/anu_gold_font"
            android:layout_weight="0"
            android:padding="8dp"
            android:text="@string/apply_filters" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag_filter_linear_layout"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_sortby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/anu_gold_tint_background"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:fabCustomSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag_filter_linear_layout"
        app:srcCompat="@drawable/baseline_sort_24" />

</androidx.constraintlayout.widget.ConstraintLayout>